Actualización de graphv2 para solucionar el problema que no mostraba información

--- a/graphv2.html
+++ b/graphv2.html
@@ -8,27 +8,29 @@
 <body>
     <input type="text" class="txtPagina" />
     <button class="btnBuscar">Buscar</button>
-    <table class="tabla"> 
+    <table class="tabla" border="1">
         <tr>
+            <td>Id</td>
             <td>Recomendación</td>
             <td>Audiencia</td>
             <td>Categoría</td>
         </tr>
     </table>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
             $('.btnBuscar').on('click', function(){
                 var pagina = $('.txtPagina').val();
-
                 //AJAX
                 $.ajax({
                     type: "GET",
                     dataType: "json",
-                    url: "https://graph.facebook.com/search?type=adinterest&q=%["+pagina+"]%5D&limit=10000&locale=es_MX&access_token=340338346931825%7C1DvnXYICAt5l2r36L8j7CqqVN-Y",
+                    url: "https://graph.facebook.com/search?type=adinterest&q=["+pagina+"]&limit=10000&locale=es_MX&access_token=340338346931825|1DvnXYICAt5l2r36L8j7CqqVN-Y",
                     success:function(data){
                         console.log(data);
+                        $.each(data.data, function(k, v) {
+                                $('.tabla').append("<tr><td>"+v.id+"</td><td>"+v.name+"</td><td>"+v.audience_size+"</td><td>"+v.topic+"</td></tr>");
+                        });
                     },
                     error:function(){
                         console.log("error");
