--- a/graphv2.html
+++ b/graphv2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <input type="text" class="txtPagina" />
-    <button class="btnBuscar">Ejecturar búsqueda</button>
+    <button class="btnBuscar">Ejecturar</button>
     <table class="tabla" border="1">
         <tr>
             <td>Id</td>
